fix: about us text

--- a/src/assets/locales/ru.json
+++ b/src/assets/locales/ru.json
@@ -7,7 +7,7 @@
             "button": "Что мы делаем?",
             "independence": {
                 "title": "Наша цель - независимая передача данных.",
-                "content": "Мы создаём серию продуктов связанных между собой лишь одной целью - независимая передача данных в сети. Это место, где никто не знает кто создать информацию, но все могут её просмотреть и увидеть. Наша идея - сделать место, где люди могут обмениваться своими мыслями, своим мнением и мировозрением не боясь, что их личность будет раскрыта."
+                "content": "Мы создаём серию продуктов связанных между собой лишь одной целью - независимая передача данных в сети. Это место, где никто не знает кто создаёт информацию, но все могут её просмотреть и увидеть. Наша идея - сделать место, где люди могут обмениваться своими мыслями, своим мнением и мировозрением не боясь, что их личность будет раскрыта."
             },
             "freedom": {
                 "title": "Наша цель - ваша свобода.",
