--- a/src/assets/locales/ru.json
+++ b/src/assets/locales/ru.json
@@ -66,7 +66,10 @@
                 "title": "Сообщение",
                 "placeholder": "Напишите сообщение..."
             },
-            "submit": "Отправить"
+            "submit": "Отправить",
+            "sending": "Отправка...",
+            "success": "Ваше сообщение успешно отправлено!",
+            "error": "Произошла ошибка при отправке вашего сообщения. Пожалуйста, попробуйте позже."
         }
     }
 }
