--- a/src/assets/locales/ru.json
+++ b/src/assets/locales/ru.json
@@ -9,10 +9,6 @@
                 "title": "Наша цель - независимая передача данных.",
                 "content": "Мы создаём серию продуктов связанных между собой лишь одной целью - независимая передача данных в сети. Это место, где никто не знает кто создаёт информацию, но все могут её просмотреть и увидеть. Наша идея - сделать место, где люди могут обмениваться своими мыслями, своим мнением и мировозрением не боясь, что их личность будет раскрыта."
             },
-            "freedom": {
-                "title": "Наша цель - ваша свобода.",
-                "content": "Мы верим, что каждый человек имеет право свободно выражать свои мысли без страха цензуры или контроля. Наша технология обеспечивает цифровое пространство, где идеи могут жить и развиваться независимо от их популярности или соответствия разным взглядам. Здесь ваш голос будет услышан, а ваше право на самовыражение - защищено."
-            },
             "safety": {
                 "title": "Наша цель - ваша безопастность.",
                 "content": "Мы делаем всё для того, чтобы защитить ваши интересы и безопастность. В нашем протоколе передачи данных задействованы передовые технологии шифрования и защиты информации для того, чтобы нельзя было узнать кто высказал своё мнение."
@@ -30,19 +26,19 @@
             "button": "Как мы это делаем?",
             "transfer": {
                 "title": "Способ передачи данных",
-                "content": "Передача данных в сети Rhizome реализована через децентрализованную Р2Р-архитектуру, где каждый участник выступает и клиентом, и сервером, устраняя единую точку отказа. Для быстрого обнаружения других участников и местоположения нужного контента используется оптимизированный протокол, основанный на Kademlia DHT. \nКонтент, такой как новостные материалы, делится на небольшие, криптографически подписанные фрагменты (чанки), что позволяет скачивать части одной новости одновременно от разных пиров. Это не только обеспечивает живучесть данных, но и значительно повышает скорость доставки: запросы к ближайшим и наиболее быстрым узлам (включая \"суперпиры\" для начального кэширования и бутстрап-узлы) обрабатываются приоритетно, обеспечивая производительность, сопоставимую с традиционными веб-сервисами."
+                "content": "Передача данных в сети Rhizome реализована через децентрализованную Р2Р-архитектуру, где каждый участник выступает и клиентом, и сервером, устраняя единую точку отказа. Для быстрого обнаружения других участников и местоположения нужного контента используется оптимизированный протокол, основанный на Kademlia DHT."
             },
             "content_generation": {
                 "title": "Генерация контента",
-                "content": "Генерация контента в Rhizome использует гибридный подход, сочетающий мощь централизованных вычислительных ресурсов для обработки информации с децентрализованной устойчивостью Р2Р-сети. Весь процесс начинается в облачном сервисе Rhizome, где развернута мощная нейронная сеть (НС), предназначенная для сбора, анализа и синтеза данных из множества традиционных новостных источников. НС формирует независимую, объективную оценку ситуации, создавая первую версию новости. \nСразу после этого сгенерированный контент (новость) вводится в сеть Rhizome через специально выделенные, доверенные узлы. После попадания в Р2Р-сеть новость разбивается на чанки, подписывается криптографическим ключом и начинает распространяться по децентрализованной сети. Таким образом, облачный сервис служит высокоэффективным и надежным \"инжектором\" качественного, независимого контента, а сама сеть Rhizome гарантирует его мгновенное, устойчивое и неуязвимое для цензуры распространение."
+                "content": "Генерация контента в Rhizome использует гибридный подход, сочетающий мощь централизованных вычислительных ресурсов для обработки информации с децентрализованной устойчивостью Р2Р-сети. Весь процесс начинается в облачном сервисе Rhizome, где развернута мощная нейронная сеть (НС), предназначенная для сбора, анализа и синтеза данных из множества традиционных новостных источников. НС формирует независимую, объективную оценку ситуации, создавая первую версию новости."
             },
             "protection": {
                 "title": "Защита внутри сети",
-                "content": "Защита целостности и подлинности данных внутри сети Rhizome основана на цифровых подписях и строгом версионировании. Каждый участник аутентифицирован уникальным Peer ID, созданным на основе пары криптографических ключей. Все публикуемые данные — от фрагментов новостей до пакетов Р2Р-протокола - подписываются приватным ключом отправителя. Это позволяет любому получателю мгновенно проверить, что данные не были изменены и действительно исходят от заявленного источника. \nКроме того, механизм коллективного обновления новостей, где новые версии должны быть согласованы или приняты другими пирами, служит дополнительной децентрализованной защитой от спама, некачественной информации и преднамеренного искажения контента."
+                "content": "Защита целостности и подлинности данных внутри сети Rhizome основана на цифровых подписях и строгом версионировании. Каждый участник аутентифицирован уникальным Peer ID, созданным на основе пары криптографических ключей. Все публикуемые данные — от фрагментов новостей до пакетов Р2Р-протокола - подписываются приватным ключом отправителя. Это позволяет любому получателю мгновенно проверить, что данные не были изменены и действительно исходят от заявленного источника."
             },
             "data_protection": {
                 "title": "Защита данных",
-                "content": "Защита конфиденциальности и персональных данных в Rhizome обеспечивается обязательным сквозным шифрованием (End-to-End Encryption). Все данные и коммуникации шифруются на устройстве отправителя и могут быть расшифрованы только конечным получателем, делая содержимое недоступным для промежуточных узлов, участвующих в маршрутизации. \nДля обеспечения максимальной свободы слова и защиты источников информации, протокол включает механизмы анонимизации, схожие с принципами луковой маршрутизации (Onion Routing) или Mixnets. Это позволяет скрыть Peer ID и реальное местоположение того участника, который первоначально сгенерировал или внес критическое обновление в новость, тем самым защищая его от отслеживания и предотвращая цензуру на уровне источника."
+                "content": "Защита конфиденциальности и персональных данных в Rhizome обеспечивается обязательным сквозным шифрованием (End-to-End Encryption). Все данные и коммуникации шифруются на устройстве отправителя и могут быть расшифрованы только конечным получателем, делая содержимое недоступным для промежуточных узлов, участвующих в маршрутизации."
             }
         }
     },
